--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@react-google-maps/api": "^2.19.2",
     "firebase": "^10.7.1",
+    "google-maps-react": "^2.0.6",
+    "mapbox-gl": "^1.13.3",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-mapbox-gl": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
